--- a/now.json
+++ b/now.json
@@ -1,5 +1,6 @@
 {
-    "alias": "shahid.com.au",
+    "version": 2,
+    "alias": "accesible-lx.shahid.com.au",
     "github": {
         "autoAlias": false
     }
