--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^6.5.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-modal": "^3.10.1",
     "react-scripts": "3.2.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "21.24.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-sort-imports-es6-autofix": "0.3.0",
+    "stylelint": "9.6.0",
+    "stylelint-config-standard": "18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
