Updated now config

--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "alias": "accesible-lx.shahid.com.au",
+    "alias": ["accesible-lx.shahid.com.au"],
     "github": {
         "autoAlias": false
     }
